# BinauralPlayer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt-qt6only  DEMO.txt  FrequencyList.txt  README.md  ambientplayer.cpp  ambientplayer.h  ambientplayerdialog.cpp  ambientplayerdialog.h  binauralengine.cpp  binauralengine.h  constants.cpp  constants.h  cuesheetdialog.cpp  cuesheetdialog.h  donationdialog.cpp  dynamicengine.cpp  dynamicengine.h  flickerwidget.cpp  flickerwidget.h  freq.htm  helpmenudialog.cpp  helpmenudialog.h  io.github.alamahant.BinauralPlayer-local.yml  io.github.alamahant.BinauralPlayer.desktop  io.github.alamahant.BinauralPlayer.metainfo.xml  io.github.alamahant.BinauralPlayer.yml  main.cpp  mainwindow.cpp  mainwindow.h  radionicsconsole.cpp  radionicsconsole.h  resources.qrc  sessiondialog.cpp  sessiondialog.h  vistimdialog.cpp  vistimdialog.h
files/: brainwave_presets.tar.xz  dark-theme (copy 1).css  dark-theme.css
